# qq-chat-bot

./: .gitignore  README.md  bot.py  config.yaml  loadNapCat.js  main.py  pyproject.toml  test.py  weather.py  websocket.py
.github/: copilot-instructions.md
logs/: bot.log.2025_12_02
napcat/: guild1.db-shm  guild1.db-wal  loadNapCat.js
napcat/config/: webui.json
src/plugins/: chatAI.py  chat_plugin.py  config.py  database.py
src/prompt/: README.md
